Fix text align on instructions

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,12 @@
 	font-size: 1.2rem;
 }
 
+.operations-input-instruction {
+	font-size: 1.2rem;
+	margin: 0.5rem 0rem;
+	text-align: center;
+}
+
 .operations-input-textarea {
 	border: 2px solid var(--background);	
 	min-width: 20rem;
@@ -48,15 +54,6 @@
 	font-size: 1.5rem;
 	margin-top: 0.5rem;
 
-	/* padding: 0.2rem 0.5rem;
-	background-color: var(--background);
-	color: white; */
-}
-
-.operations-input-result-title {
-	font-size: 1.2rem;
-	margin: 0.5rem 0rem;
-	text-align: center;
 	/* padding: 0.2rem 0.5rem;
 	background-color: var(--background);
 	color: white; */
